RavenDb-20432 Fix alignment on the Backup Restore view

--- a/src/Raven.Studio/wwwroot/Content/css/checkbox-toggle.less
+++ b/src/Raven.Studio/wwwroot/Content/css/checkbox-toggle.less
@@ -125,7 +125,7 @@
             left: 0;
             top: 9px;
             margin-left: -35px;
-            background-color: fadeout(@gray, 30%);
+            background-color: var(--panel-bg-3);
             border-radius: 100px;
             cursor: pointer;
             .transition(~"border 0.15s ease-in-out, color 0.15s ease-in-out, background-color 0.15s ease-in-out");
