--- a/src/Raven.Studio/wwwroot/Content/css/styles-common-scoped.less
+++ b/src/Raven.Studio/wwwroot/Content/css/styles-common-scoped.less
@@ -2134,6 +2134,10 @@ ul.properties {
     }
 }
 
+.border-light {
+    border-color: var(--bs-border-color);
+}
+
 .border-warning {
     border-color: @brand-warning !important;
 }
